fix: :art: add white space

--- a/personal_page/css/styles.scss
+++ b/personal_page/css/styles.scss
@@ -76,6 +76,7 @@ main {
     }
     .description {
       text-align: justify;
+      margin: 1.2em;
     }
   }
 }
